--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/app.js",
+    "start:dev": "ts-node ./src/app.ts",
     "dev": "nodemon --exec ts-node src/app.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "joi": "^17.12.2",
     "koa": "^2.15.0",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.1",
