--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "joi": "^17.12.2",
+    "json2csv": "^6.0.0-alpha.2",
     "koa": "^2.15.0",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.1",
     "mongoose": "^8.1.3"
   },
   "devDependencies": {
+    "@types/json2csv": "^5.0.7",
     "@types/koa": "^2.14.0",
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-router": "^7.4.8",
