--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,11 @@ services:
     container_name: finance-app
     build: .
     ports:
-      - "3000:3000"
+      - "${APP_PORT}:3000"
     environment:
       - NODE_ENV=production
     depends_on:
       - mongo
-      - elasticsearch
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
@@ -18,21 +17,9 @@ services:
     container_name: mongo
     image: mongo
     ports:
-      - "27017:27017"
+      - "${MONGODB_PORT}:27017"
     volumes:
       - mongodb-data:/data/db
-
-  elasticsearch:
-    container_name: elasticsearch
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.0  # Use the version that suits your requirements
-    environment:
-      - "discovery.type=single-node"  # This is for development and testing, not recommended for production
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"  # Adjust the Java heap size according to your needs
-    ports:
-      - "9200:9200"
-      - "9300:9300"
-    volumes:
-      - elasticsearch-data:/usr/share/elasticsearch/data
 
 volumes:
   mongodb-data:
